[metadata]
name = aiohug_swagger
version = 1.0b1
url = https://stash.wargaming.net/projects/WOWSP/repos/hug_extensions
author = nonamenix
author_email = nonamenix@gmail.com
description = Generate swagger documentation for web services developed with aiohug
long_description = file: README.md
license = BSD 3-Clause License
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6

[options.extras_require]
marshmallow_3 = marshmallow==3.0.0rc7

[options]
packages = find:
include_package_data = True

[options.packages.find]
exclude =
	tests

[options.package_data]
* = *.txt, *.md


[tool:pytest]
env =
    DEFAULTSETTINGS_MODULE = settings_test
    TESTS_ON_AIR = yes
python_files = tests.py test_*.py
norecursedirs = .venv*
pep8maxlinelength = 120

[tool:coverage:run]
omit =
    */tests/*

[tool:coverage:report]
exclude_lines =
    pragma: no cover